--- a/style.css
+++ b/style.css
@@ -6,7 +6,13 @@ body {
     font-size: 18px;
     padding: 0px;
     margin: 0px; 
-    width: 1600px; 
+}
+
+.center{
+    display: flex;
+    flex-direction: column;
+    max-width: 1600px;
+    margin:auto;
 }
 
 header {
@@ -26,31 +32,31 @@ logo {
 ul {
     list-style: none;
     display: flex;
-    gap: 10px;
+    gap: 30px;
 }
 
 a {
-    color: white;
+    color: #E5E7EB;
     text-decoration: none;
 }
 
 .main-box {
     background-color: #1F2937;
     color: white;
-    padding: 100px 250px;
+    padding: 170px 250px;
     display: flex;
     gap: 40px;
 }
 
 .showcase-img {
     flex: 0 1 auto;
-    width: 60%;
-    height: 200px;
-    background-color: #E5E7EB;
+    width: 1000px;
+    height: 250px;
+    background-color: gray;
     text-align: center;
-    line-height: 200px;
-    opacity: 1;
-    color: white
+    line-height: 250px;
+    opacity: 0.7;
+    color: white;
 }
 
 .hero-main-text {
@@ -62,15 +68,17 @@ a {
 
 .text {
     padding-bottom: 20px;
+    font-size: 18px;
     color: #E5E7EB;
 }
 
 button {
     background-color:#3882F6;
     border: none;
-    padding: 6px 24px;
-    border-radius: 5px;
+    padding: 12px 36px;
+    border-radius: 10px;
     color: white;
+    font-size: 18px;
 }
 
 .info-box {
@@ -100,8 +108,8 @@ button {
 .img-box {
     width: 200px;
     height: 200px;
-    border: 4px solid #3882F6;
-    border-radius: 5px;
+    border: 6px solid #3882F6;
+    border-radius: 20px;
 }
 
 .caption {
@@ -120,10 +128,55 @@ button {
 q {
     font-size: 36px;
     font-style: italic;
+    color: #1F2937;
 }
 
 .quote > p {
     font-weight: bold;
     text-align: right;
     margin-right: 60px;
+}
+
+.call-box {
+    display: flex;
+    padding: 100px 0px;
+    justify-content: center;
+}
+
+.sign-up-info {
+    background-color: #3882F6;
+    display: flex;
+    gap: 150px;
+    padding: 50px 150px;
+    border-radius: 10px;
+    align-items: center;
+}
+
+.text-group {
+    display: flex;
+    flex-direction: column;
+}
+
+.text-group > .title, .text-group > .text {
+    padding: 0px;
+    margin: 0px;
+    color: white;
+}
+
+.text-group > .text {
+    color: #E5E7EB
+}
+
+.sign-up-info > button {
+    height: min-content;
+    border: 1px solid white;
+    padding: 5px 20px;
+}
+
+footer {
+    display: flex;
+    background-color: #1F2937;
+    color: white;
+    justify-content: center;
+    padding: 20px 0px;
 }
